# train_schedule_plasmoid

./: CMakeLists.txt  README  config.ui  hisc-app-train_schedule.svgz  install_manifest.txt  schedule.cpp  schedule.h  schedule_item.cpp  schedule_item.h  station.cpp  station.h  stations  train_schedule.cpp  train_schedule.h  train_schedule_engine.cpp  train_schedule_engine.desktop  train_schedule_engine.h  train_schedule_plasmoid.desktop  worker.cpp  worker.h
